--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
 
 <head>
-	<title>AJAX test</title>
-	<script type="text/javascript" src="main.js"></script>
+    <title>AJAX Test</title>
+    <script src="main.js"></script>
 </head>
 
 <body>
-	<div id="data"></div>
+    <button onclick="writeToDocument('people')">People</button>
+    <button onclick="writeToDocument('planets')">Planets</button>
+    <button onclick="writeToDocument('species')">Species</button>
+    <button onclick="writeToDocument('starships')">Starship</button>
+    <button onclick="writeToDocument('vehicles')">Vehicles</button>
+    <button onclick="writeToDocument('films')">Films</button>
+    <div id="data"></div>
 </body>
-</html>
+
+</html> 
